== Groups by itthinx - changelog.txt

= 2.20.0 =
* WordPress 6.4 compatible.

= 2.19.0 =
* WordPress 6.4 compatible.
* Requires at least WordPress 6.0.
* Requires at least PHP 7.4.
* Fixed creation of dynamic properties (PHP 8.2).
* Revised the group parent selection to show hierarchy and group names sorted when adding or editing a group.
* Fixed style and output escaping of the tree view.
* Revised the tree view and linking to group edit for authorized users.

= 2.18.0 =
* WordPress 6.1 compatible.
* WordPress 6.2-alpha compatible.
* Added the static exists() method to the Groups_Group class.
* Added checks on data used to restrict posts to avoid invalid group IDs.
* Revised the posts_where filter that restricts post access for resilience against invalid postmeta values.
* Fixed several instances of deprecated notices related to passing null where non-null values are required (PHP 8.x compatibility).
* Fixed the style of the Capabilities select container on the Groups admin screen.
* Fixed the style of the Groups select container on post admin screens and added a stylesheet for those.
* Moved inline styles to stylesheet for the user admin screen and improved appearance of the group selection fields.
* Revised several parts of code to fix documentation and format issues.
* Revised the capability admin screens to add, edit and remove capabilities, improved code and fixed several instances of missing output escaping.
* Fixed the HTML for bulk capability removal and improved styling.
* Removed some instances of unnecessary translations.
* Supplemented several instances of missing code docs.
* Revised the group admin screens to add, edit and remove groups. Several code format improvements and fixes, and fixed instances of missing output escaping in related forms.
* Fixed selected capabilities were voided when creating a group via the group add admin screen failed.
* Fixed character escaping in parent selection on the group edit admin screen.