@@ -37,7 +37,7 @@ class Groups_Comment_Access {
 		add_filter( 'comments_clauses', array( __CLASS__, 'comments_clauses' ), 10, 2 );
 		// the comments_clauses filter is used in WP_Comment_Query::get_comment_ids() before the
 		// comments are filtered with the_comments in WP_Comment_Query::get_comments() so we don't need to do this again
-		//add_filter( 'the_comments', array( __CLASS__, 'the_comments' ), 10, 2 );
+		// add_filter( 'the_comments', array( __CLASS__, 'the_comments' ), 10, 2 );
 		add_filter( 'wp_count_comments', array( __CLASS__, 'wp_count_comments' ), 999, 2 ); // see wp-includes/comment.php function wp_count_comments(...)
 		add_filter( 'get_comments_number', array( __CLASS__, 'get_comments_number' ), 10, 2 );
 	}
@@ -315,7 +315,7 @@ class Groups_Comment_Access {
 			}
 		}
 		$comment_count['moderated'] = $comment_count['awaiting_moderation'];
-		//unset( $stats['awaiting_moderation'] );
+		// unset( $stats['awaiting_moderation'] );
 		return (object) $comment_count;
 	}
 }
